--- a/Peas in a Pod/index.html
+++ b/Peas in a Pod/index.html
@@ -1,25 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Primary Meta Tags -->
-    <title>Peas in a Pod</title>
-<meta name="title" content="Peas in a Pod" />
-<meta name="description" content="Welcome to Peas in a Pod, your ultimate podcast app for a seamless and immersive listening experience. With Peas in a Pod, we redefine the way you consume podcasts, making it effortless to discover, enjoy, and share your favorite audio content."/>
+<!-- Primary Meta Tags -->
+<title>Peas in a Pod </title>
+<meta name="title" content="Peas in a Pod " />
+<meta name="description" content="Welcome to Peas in a Pod, your ultimate podcast app for a seamless and immersive listening experience. With Peas in a Pod, we redefine the way you consume podcasts, making it effortless to discover, enjoy, and share your favorite audio content." />
+
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://metatags.io/" />
-<meta property="og:title" content="Meta Tags — Preview, Edit and Generate" />
-<meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:url" content="https://peasinapod.netlify.app" />
+<meta property="og:title" content="Peas in a Pod " />
+<meta property="og:description" content="Welcome to Peas in a Pod, your ultimate podcast app for a seamless and immersive listening experience. With Peas in a Pod, we redefine the way you consume podcasts, making it effortless to discover, enjoy, and share your favorite audio content." />
+<meta property="og:image" content="https://peasinapod.netlify.app/peas.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://metatags.io/" />
-<meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate" />
-<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:url" content="https://peasinapod.netlify.app" />
+<meta property="twitter:title" content="Peas in a Pod " />
+<meta property="twitter:description" content="Welcome to Peas in a Pod, your ultimate podcast app for a seamless and immersive listening experience. With Peas in a Pod, we redefine the way you consume podcasts, making it effortless to discover, enjoy, and share your favorite audio content." />
+<meta property="twitter:image" content="https://peasinapod.netlify.app/peas.png" />
 
-<!-- Meta Tags Generated with https://metatags.io -->
+
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
