updated meta tags

--- a/Peas in a Pod/index.html
+++ b/Peas in a Pod/index.html
@@ -8,17 +8,19 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://peasinapod.netlify.app" />
+<meta property="og:url" content="https://peasinapod.netlify.app/" />
 <meta property="og:title" content="Peas in a Pod " />
 <meta property="og:description" content="Welcome to Peas in a Pod, your ultimate podcast app for a seamless and immersive listening experience. With Peas in a Pod, we redefine the way you consume podcasts, making it effortless to discover, enjoy, and share your favorite audio content." />
 <meta property="og:image" content="https://peasinapod.netlify.app/peas.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://peasinapod.netlify.app" />
+<meta property="twitter:url" content="https://peasinapod.netlify.app/" />
 <meta property="twitter:title" content="Peas in a Pod " />
 <meta property="twitter:description" content="Welcome to Peas in a Pod, your ultimate podcast app for a seamless and immersive listening experience. With Peas in a Pod, we redefine the way you consume podcasts, making it effortless to discover, enjoy, and share your favorite audio content." />
 <meta property="twitter:image" content="https://peasinapod.netlify.app/peas.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
